--- a/README
+++ b/README
@@ -1,6 +1,9 @@
 This repo contains a bunch of scripts that help with managing Xcode Projects
 
-1.resclean.py
-
+resclean.py
+-----------
 This script helps clean unused resources in Xcode Projects
 
+xcodeclean
+----------
+This script helps clean all the metadata files in the Xcode Project Folder
