--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This repo contains a bunch of scripts that help with managing Xcode Projects
+A set of tools that help managing Xcode Projects
 
 resclean.py
 -----------
